Segmentation fault in mongos when config servers not available

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.2.9
    • Affects Version/s: 3.2.8
    • Component/s: Sharding
    • Environment:
      Ubuntu 14.04 x64 on Hyper-V 2012R2 w/Docker 1.12
    • Fully Compatible
    • ALL
    • Hide

      Create an CSRS and start mongos:
      /usr/bin/mongos --configdb config/config-0:27017,config-1:27017,config-2:27017

      Show
      Create an CSRS and start mongos: /usr/bin/mongos --configdb config/config-0:27017,config-1:27017,config-2:27017
    • Sharding 18 (08/05/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Mongos crashes on startup occasionally (3 out of 10 times so far).
      Logs are attached.

        1. mongos-0.log
          22 kB
        2. mongos-1.log
          21 kB

            Assignee:
            Misha Tyulenev (Inactive)
            Reporter:
            Aristarkh Zagorodnikov (EXT)
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: