SERVER-25029 fix segfault in mongos when config servers are not available