src/mongo/s/client/sharding_connection_hook.cpp
@@ -48,6 +48,7 @@
 #include "mongo/s/cluster_last_error_info.h"
 #include "mongo/s/grid.h"
 #include "mongo/s/version_manager.h"
+#include "mongo/util/assert_util.h"
 #include "mongo/util/log.h"
 
 namespace mongo {
@@ -172,6 +173,9 @@ void ShardingConnectionHook::onCreate(DBClientBase* conn) {
         // is SCCC.
         ConnectionString configConnString;
         if (configServerMode == CatalogManager::ConfigServerMode::CSRS) {
+            uassert(ErrorCodes::ReplicaSetNotFound,
+                    "CSRS replica set is not initialized",
+                    isMasterResponse.hasField("setName"));
             configConnString = ConnectionString::forReplicaSet(
                 isMasterResponse["setName"].valueStringData(),
                 {static_cast<DBClientConnection*>(conn)->getServerHostAndPort()});
